language/move-lang/tests/move_check/dependencies/friend_cycle_3.exp
error[E02004]: invalid 'module' declaration
   ┌─ tests/move_check/dependencies/friend_cycle_3.move:8:5
   │
 4 │     friend 0x2::B;
   │     -------------- '0x2::B' is a friend of '0x2::A'
   ·
 8 │     friend 0x2::C;
   │     ^^^^^^^^^^^^^^ '0x2::C' is a friend of '0x2::B'. This 'friend' relationship creates a dependency cycle.
   ·
12 │     friend 0x2::A;
   │     -------------- '0x2::A' is a friend of '0x2::C'

